--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "pokedex",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://Jostyck9.github.io/pokedex",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
